Edit P1C3 continue concept.

--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/05-1-break.mdx
@@ -213,7 +213,7 @@ The break statement is used to jump **out** of the current loop. As shown in the
 
 ## Break -- when, why, and how?
 
-Sometimes you get part-way through a loop and know that the remainder of the loop's code is not needed, and there is no need to check the loop's condition again. If you can capture that in a condition, then combining a branching statement with a `break` will let you jump out of the loop.
+Sometimes you get part-way through a loop and know that the remainder of the loop's code is not needed, and there is no need to check the loop's condition again. If you can capture that in a condition, then combining a [branching statement](../03-0-branching) with a `break` will let you jump out of the loop.
 
 This isn't something you will use often, but is good to know exists.
 
@@ -304,7 +304,7 @@ This example was inspired by the classic Monty Python sketch below. This comedy 
 
 :::note[Summary]
 
-- The break statement is an **action**, allowing you to jump to the end of the current loop.
+- The break statement is an **instruction** allowing you to jump to the end of the current loop.
 - The break statement is typically coded within a [branching](../03-0-branching) statement that checks if the loop should terminate early.
 
 :::
