Update P0C2 Put together set up guide pages

--- a/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/2-0-pi-computer.mdx
+++ b/src/content/docs/book/part-0-getting-started/2-computer-use/2-put-together/2-0-pi-computer.mdx
@@ -3,6 +3,7 @@ title: Build my Raspberry Pi
 sidebar:
     attrs:
         class: pi
+    label: " - Raspberry Pi Hardware"
 banner:
     content: |
         Build your own Multi-tool!
@@ -203,14 +204,14 @@ Building programs really requires that you have access to a computer that you ca
 
 Using the _Raspberry Pi_ Multi-tool will give you several advantages:
 
--   You can play around with Unix without risking your day-to-day computer (which you can switch to Linux once you are more confident)
--   The Raspberry Pi include pins for **General Purpose Input / Output** (**GPIO**) though a [40-pin header](https://www.raspberrypi.com/documentation/computers/raspberry-pi.html#gpio-and-the-40-pin-header) on the board:
+- You can play around with Unix without risking your day-to-day computer (which you can switch to Linux once you are more confident)
+- The Raspberry Pi include pins for **General Purpose Input / Output** (**GPIO**) though a [40-pin header](https://www.raspberrypi.com/documentation/computers/raspberry-pi.html#gpio-and-the-40-pin-header) on the board:
 
     ![Raspberry Pi 40-pin header](https://www.raspberrypi.com/documentation/computers/images/GPIO-Pinout-Diagram-2.png)
 
     We can use this to interact with electronics and see how we can control things in the real world using code.
 
--   Playing with a Raspberry Pi is just more fun 😁.
+- Playing with a Raspberry Pi is just more fun 😁.
 
 :::note[Where do you get one of these multi-tools?]
 You don't. You _build it yourself_.
@@ -237,19 +238,19 @@ There are many hardware and component choices you can make building your Raspber
 
 This is the list of components we used to build our multi-tool with links to Australian retailers where they can be purchased.
 
--   1 x [Raspberry Pi 4 Model B 8GB](https://core-electronics.com.au/raspberry-pi-4-model-b-8gb.html)
--   1 x [Raspberry Pi 4 Power Supply (Official) - USB-C 5.1V 15.3W (White)](https://core-electronics.com.au/raspberry-pi-4-official-power-supply-usb-c-5v-15w-white.html)
--   1 x [MicroSD Memory Card - 32GB Class 10](https://core-electronics.com.au/microsd-memory-card-32gb-class-10.html)
--   1 x [Pi Hut Modular Raspberry Pi 4 Case - Black](https://core-electronics.com.au/pi-hut-modular-raspberry-pi-4-case-black.html)
--   1 x [3pc Heatsink Kit for Raspberry Pi 4](https://core-electronics.com.au/3pc-heatsink-kit-for-raspberry-pi-4.html)
--   1 x [HighPi Pro 5V Cooling Fan](https://core-electronics.com.au/highpi-pro-5v-cooling-fan.html)
--   1 x [Raspberry Pi Keyboard - Red/White](https://core-electronics.com.au/raspberry-pi-keyboard-red-white.html)
--   1 x [Raspberry Pi Mouse - Red/White](https://core-electronics.com.au/raspberry-pi-mouse-red-white.html)
--   1 x [10.1inch Capacitive Touch Display](https://littlebirdelectronics.com.au/products/10-1inch-capacitive-touch-display-wide-color-gamut-1280x800-optical-bonding-toughened-glass-panel-hdmi-type-c-display-interface)
--   1 x [0.5m Micro-HDMI Cable (HDMI Type-A to Type-D)](https://www.cablechick.com.au/cables/05m-micro-hdmi-cable-hdmi-type-a-to-type-d.html)
--   1 x [USB Type-C Short Sync & Charge Flat Cable 20cm](https://core-electronics.com.au/usb-type-c-short-sync-charge-flat-cable-20cm.html)
--   1 x [ModMyPi Modular RPi 2 Case - VESA Splash (75/100mm)](https://core-electronics.com.au/modmypi-modular-rpi-2-case-vesa-splash-75-100mm.html)
--   1 x [USB C Power Delivery Battery Bank 20000mAh](https://core-electronics.com.au/usb-c-pd-battery-bank-20000mah.html)
+- 1 x [Raspberry Pi 4 Model B 8GB](https://core-electronics.com.au/raspberry-pi-4-model-b-8gb.html)
+- 1 x [Raspberry Pi 4 Power Supply (Official) - USB-C 5.1V 15.3W (White)](https://core-electronics.com.au/raspberry-pi-4-official-power-supply-usb-c-5v-15w-white.html)
+- 1 x [MicroSD Memory Card - 32GB Class 10](https://core-electronics.com.au/microsd-memory-card-32gb-class-10.html)
+- 1 x [Pi Hut Modular Raspberry Pi 4 Case - Black](https://core-electronics.com.au/pi-hut-modular-raspberry-pi-4-case-black.html)
+- 1 x [3pc Heatsink Kit for Raspberry Pi 4](https://core-electronics.com.au/3pc-heatsink-kit-for-raspberry-pi-4.html)
+- 1 x [HighPi Pro 5V Cooling Fan](https://core-electronics.com.au/highpi-pro-5v-cooling-fan.html)
+- 1 x [Raspberry Pi Keyboard - Red/White](https://core-electronics.com.au/raspberry-pi-keyboard-red-white.html)
+- 1 x [Raspberry Pi Mouse - Red/White](https://core-electronics.com.au/raspberry-pi-mouse-red-white.html)
+- 1 x [10.1inch Capacitive Touch Display](https://littlebirdelectronics.com.au/products/10-1inch-capacitive-touch-display-wide-color-gamut-1280x800-optical-bonding-toughened-glass-panel-hdmi-type-c-display-interface)
+- 1 x [0.5m Micro-HDMI Cable (HDMI Type-A to Type-D)](https://www.cablechick.com.au/cables/05m-micro-hdmi-cable-hdmi-type-a-to-type-d.html)
+- 1 x [USB Type-C Short Sync & Charge Flat Cable 20cm](https://core-electronics.com.au/usb-type-c-short-sync-charge-flat-cable-20cm.html)
+- 1 x [ModMyPi Modular RPi 2 Case - VESA Splash (75/100mm)](https://core-electronics.com.au/modmypi-modular-rpi-2-case-vesa-splash-75-100mm.html)
+- 1 x [USB C Power Delivery Battery Bank 20000mAh](https://core-electronics.com.au/usb-c-pd-battery-bank-20000mah.html)
 
 ## 2. Building your multi-tool
 
@@ -293,11 +294,11 @@ Open the black Raspberry Pi case (and put the screws and feet aside for the mome
 :::tip[Insert the Pi into the case]
 This case is a bit fiddly to get the Pi in correctly, but it doesn't require much force.
 
--   Place the Pi in the case
--   Align the network port with the opening.
--   Apply a little pressure to the back of the USB ports, the headphone jack should slide into place.
--   Push the board across so the USB-C power and Mini HDMI ports are seated correctly.
--   All 4 Pi screws should line up with the holes in the case.
+- Place the Pi in the case
+- Align the network port with the opening.
+- Apply a little pressure to the back of the USB ports, the headphone jack should slide into place.
+- Push the board across so the USB-C power and Mini HDMI ports are seated correctly.
+- All 4 Pi screws should line up with the holes in the case.
 
 ![Gif showing the Pi installed in the case](/gifs/pi-computer/PiCaseInstall.gif)
 
@@ -330,9 +331,9 @@ To power the cooling fan, you will need to connect the fan to the GPIO pins on t
 
 Put the case lid and secured fan next to the base part of the case, and connect the 3 wires to the following GPIO pins:
 
--   <span style="color:red">*Red*</span> wire to pin 4 (5V)
--   _Black_ wire to pin 6 (Ground)
--   <span style="color:blue">*Blue*</span> wire to pin 8 (GPIO14)
+- <span style="color:red">_Red_</span> wire to pin 4 (5V)
+- _Black_ wire to pin 6 (Ground)
+- <span style="color:blue">_Blue_</span> wire to pin 8 (GPIO14)
 
 You should now have something that looks similar to this:
 
@@ -357,8 +358,8 @@ Secure the VESA mount to the case using the four **long screws** that were inclu
 
 :::danger[Important!]
 
--   Make sure to line up mount so that the 75 x 75mm VESA mount holes are on opposite side to the USB-C and Mini HDMI ports.
--   It doesn't matter if the mount is flipped (as it is in the image above), as the middle holes won't be used.
+- Make sure to line up mount so that the 75 x 75mm VESA mount holes are on opposite side to the USB-C and Mini HDMI ports.
+- It doesn't matter if the mount is flipped (as it is in the image above), as the middle holes won't be used.
 
 :::
 
@@ -368,9 +369,9 @@ Due to the position of the Micro SD card slot on the Raspberry Pi, it is easier 
 
 To insert the Micro SD card into the Raspberry Pi:
 
--   Remove the Micro SD card form the SD card adapter.
--   Position the Pi with the VESA mount on top.
--   Insert the SD card into the Pi with the label facing up.
+- Remove the Micro SD card form the SD card adapter.
+- Position the Pi with the VESA mount on top.
+- Insert the SD card into the Pi with the label facing up.
 
 <MySwiper client:only height="" images={Swiper2}></MySwiper>
 
@@ -390,11 +391,11 @@ Make sure the SD card is inserted before connecting the screen, or you will like
 
 To attach the Raspberry Pi to the display screen:
 
--   Face the top of the screen towards yourself
--   Place two of the spacers on the VESA mount holes on the screen closets to the top.
--   Place the Pi on top of the spacers.
--   Place the other spaces on the nylon screws
--   Secure the Pi to the screen using the two nylon screws and four spacers. You can use your fingers to tighten the screws.
+- Face the top of the screen towards yourself
+- Place two of the spacers on the VESA mount holes on the screen closets to the top.
+- Place the Pi on top of the spacers.
+- Place the other spaces on the nylon screws
+- Secure the Pi to the screen using the two nylon screws and four spacers. You can use your fingers to tighten the screws.
 
 Here are some images to help you follow along:
 
@@ -406,20 +407,20 @@ Next, locate the **Micro HDMI to HDMI** and **20 cm USB-C to USB-A** cables (as 
 
 For the **20 cm USB-C to USB-A** cable:
 
--   Connect the USB-C end to the Screen's "Display & Touch" port.
--   Connect the USB-A end to one of the USB-A ports on the end of the Pi.
+- Connect the USB-C end to the Screen's "Display & Touch" port.
+- Connect the USB-A end to one of the USB-A ports on the end of the Pi.
 
 For the **Micro HDMI to HDMI** cable:
 
--   Connect the Micro HDMI to the Pi's **first** HDMI port (closest to the power USB-C port).
--   Connect the full-size HDMI to the Screen's "HDMI" port.
+- Connect the Micro HDMI to the Pi's **first** HDMI port (closest to the power USB-C port).
+- Connect the full-size HDMI to the Screen's "HDMI" port.
 
 <MySwiper client:only height="" images={Swiper4}></MySwiper>
 
 :::tip[Recommendations]
 
--   Make sure the Micro HDMI is connected to the first port as shown in the images above. Using the second HDMI port may cause sound issues.
--   Putting a loop in the cable will help with cable management.
+- Make sure the Micro HDMI is connected to the first port as shown in the images above. Using the second HDMI port may cause sound issues.
+- Putting a loop in the cable will help with cable management.
 
 :::
 
@@ -459,8 +460,8 @@ The easiest way to power the multi-tool is to use the power supply that came wit
 
 **To use mains power:**
 
--   Connect the USB-C end to the Pi's USB-C power port.
--   Plug the other end into a power outlet.
+- Connect the USB-C end to the Pi's USB-C power port.
+- Plug the other end into a power outlet.
 
 :::tip
 Fold the screen down to plug in the power supply.
@@ -474,10 +475,10 @@ If you are on the go or want to use the multi-tool in a location without power, 
 
 **To use battery power:**
 
--   Locate the longer USB-C to USB-A cable.
--   Connect the USB-A end to the power bank.
--   Connect the USB-C end to the Pi.
--   The power bank will turn on automatically.
+- Locate the longer USB-C to USB-A cable.
+- Connect the USB-A end to the power bank.
+- Connect the USB-C end to the Pi.
+- The power bank will turn on automatically.
 
 <MySwiper client:only height="" images={Swiper8}></MySwiper>
 
