Add videos to part 1

--- a/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
+++ b/src/content/docs/book/part-1-instructions/2-communicating-syntax/0-overview.mdx
@@ -1,6 +1,11 @@
 ---
 title: Overview of Communicating Syntax
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="vRKJhjHwFLs" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 This chapter takes a detour to explore the hidden path to understanding how programming languages are communicated. This will explore programming language **terminology**, and the tools that language designers use to capture and communicate the rules of their programming lagnuages. This will help you make the most of the following chapters as you learn how to use programming to build your own digital realities.
 
