--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/01-0-boolean-data.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/01-0-boolean-data.mdx
@@ -1,6 +1,11 @@
 ---
 title: "Boolean Data"
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="rmY28jiKb5w" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 The boolean [type](../../../1-sequence-and-data/1-concepts/06-type) is used to represent **truth**. A boolean value will either be **true** or **false**. These values are used extensively in control flow statements to determine which instruction to perform next.
 
