--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-0-branching.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-0-branching.mdx
@@ -1,6 +1,11 @@
 ---
 title: "Branching"
 ---
+import { YouTube } from 'astro-embed';
+
+<div class="not-content">
+  <YouTube id="72biJP5-FqM" params="fs=1&modestbranding=1&rel=0&autoplay=1"/>
+</div>
 
 The machine code of a computer will include instructions that allow it to conditionally jump to another instruction somewhere within the code. We have seen an example of a non-conditional jump with method calls, where control jumped to the instruction at the start of a method. Rather than jumping to new methods, conditional jumps are useful for jumping between instructions within the current code.
 
